--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple">#673AB7</color>
+    <color name="pink">#E91E63</color>
+    <color name="blue">#2196F3</color>
+
 </resources>
